--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,4 +19,4 @@ include(GoogleTest)
 add_subdirectory(JUCE)
 add_subdirectory(VITRO)
 add_subdirectory(tests)
-add_subdirectory(src)
+add_subdirectory(viewer)
