--- a/viewer/CMakeLists.txt
+++ b/viewer/CMakeLists.txt
@@ -1,7 +1,7 @@
-set(TARGET "test_juce_vitro")
+set(TARGET "viewer")
 
 juce_add_gui_app(${TARGET}
-    PRODUCT_NAME "Test juce-vitro"
+    PRODUCT_NAME "vitro_viewer"
     VERSION "1.0.0"
 )
 
