Fix unit tests build.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -12,6 +12,8 @@ target_link_libraries(${TARGET}
     PRIVATE
         juce::juce_core
         juce::juce_data_structures
+        juce::juce_audio_basics
+        juce::juce_audio_utils
         juce::juce_gui_basics
         juce::juce_gui_extra
 
